create chat and profildetail activity, updated all project as design

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
         android:textSize="16sp"/>
 
     <Button
+        android:id="@+id/btnLogin"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:layout_marginTop="40dp"
