--- a/app/src/main/res/drawable/chat_send_button_background.xml
+++ b/app/src/main/res/drawable/chat_send_button_background.xml
@@ -2,9 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white"/>
-            <stroke android:color="@color/input_bordered" android:width="1dp"/>
-            <corners android:radius="10dp"/>
+            <solid android:color="@color/app_color"/>
+            <corners android:radius="50dp"/>
         </shape>
     </item>
 </selector>
