--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,6 +55,7 @@
         android:autofillHints="@string/confirm_password" />
 
     <Button
+        android:id="@+id/btnRegister"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:layout_marginTop="100dp"
